暂时屏蔽营业额分析导出

--- a/WebContent/crm/index_K.html
+++ b/WebContent/crm/index_K.html
@@ -241,7 +241,7 @@
                 <li><a href="#day-chart" data-toggle="tab" onclick="javascript:chartresize2()">日</a></li>
 				<li><a href="#week-chart" data-toggle="tab" onclick="javascript:chartresize4()">周</a></li>
                 <li  class="active"><a href="#month-chart" data-toggle="tab" onclick="javascript:chartresize3()">月</a></li>
-                <div class="col-sm-1 pull-right"><button type="button" id="search-btn-export" class="btn btn-block btn-sm" style="margin-right: 50px; font-size: 14px; background-color: rgba(0,0,0,0.1);color: #fff">数据导出</button></div>
+                <!--<div class="col-sm-1 pull-right"><button type="button" id="search-btn-export" class="btn btn-block btn-sm" style="margin-right: 50px; font-size: 14px; background-color: rgba(0,0,0,0.1);color: #fff">数据导出</button></div>-->
                 <div class="col-sm-1 pull-right"><button type="button" id="search-btn-add" class="btn btn-block btn-sm" style="margin-right: 50px; font-size: 14px; background-color: rgba(0,0,0,0.1);color: #fff">加入对比</button></div>
 			  </ul>
 			  <div class="tab-content no-padding" id="tab-content">
