总部首页-修改商品销售档案页面

--- a/WebContent/crm/searchDataItem_view.html
+++ b/WebContent/crm/searchDataItem_view.html
@@ -1135,7 +1135,7 @@ Date.prototype.format=function(fmt) {
 	        	         	  	$("#image_pro").html("<img width=\"60px\" height=\"60px\" src=\""+obj.first_url+"\">");
 	        	         	  });
 	        			}
-	        		});
+	        		},false);
 	        		if(imageInfo == ""){
 	        			imageInfo = "<div class=\"col-lg-4 text-left\" id=\"image_pro\"></div>";
 	        		}
