--- a/WebContent/crm/user_behavior.html
+++ b/WebContent/crm/user_behavior.html
@@ -365,7 +365,7 @@
 								<div class="box box-default">
 									<div class="box-header h2 text-light-blue"><strong>用户购物体验分析(昨天)</strong></div>
 									<div class="box-body" style="padding-top: 25px;">
-										<h4 style="text-align: center;">每个用户完成下单共需<strong style="color: cornflowerblue;font-size: 24px;margin-left: 10px;margin-right: 10px;" id="user_sum"></strong>步</h4>
+										<h4 style="text-align: center;">平均每个用户下单需<strong style="color: cornflowerblue;font-size: 24px;margin-left: 10px;margin-right: 10px;" id="user_sum"></strong>步</h4>
 										<div>
 											<div class="col-sm-3 col3">
 												<div>
@@ -373,7 +373,7 @@
 														<strong>浏览</strong>
 													</div>
 													<p class="bigall">共<strong class="all" id="numS1"></strong>次</p>
-													<p class="bigaverage">平均每天<strong class="average" id="avg1"></strong>次</p>
+													<p class="bigaverage">人均浏览<strong class="average" id="avg1"></strong>次</p>
 												</div>
 
 											</div>
@@ -383,7 +383,7 @@
 														<strong>加购</strong>
 													</div>
 													<p class="bigall">共<strong class="all" id="numS2"></strong>次</p>
-													<p class="bigaverage">平均每天<strong class="average" id="avg2"></strong>次</p>
+													<p class="bigaverage">人均加购<strong class="average" id="avg2"></strong>次</p>
 												</div>
 											</div>
 											<div class="col-sm-3 col3">
@@ -392,7 +392,7 @@
 														<strong>下单</strong>
 													</div>
 													<p class="bigall">共<strong class="all" id="numS3"></strong>次</p>
-													<p class="bigaverage">平均每天<strong class="average" id="avg3"></strong>次</p>
+													<p class="bigaverage">人均下单<strong class="average" id="avg3"></strong>次</p>
 												</div>
 											</div>
 											<div class="col-sm-3 col3">
@@ -401,7 +401,7 @@
 														<strong>支付</strong>
 													</div>
 													<p class="bigall">共<strong class="all" id="numS4"></strong>次</p>
-													<p class="bigaverage">平均每天<strong class="average" id="avg4"></strong>次</p>
+													<p class="bigaverage">人均支付<strong class="average" id="avg4"></strong>次</p>
 												</div>
 											</div>
 										</div>
