修改样式，去掉横线

--- a/WebContent/crm/data_files.html
+++ b/WebContent/crm/data_files.html
@@ -116,7 +116,7 @@
     .yichang .type_con{background: url("dist/img/gonghai(2).png") no-repeat; background-size: 100% 100%;}
     .gonghai:hover .type_con,.yichang:hover .type_con{display: block;}
     .fold-con{display: none;}
-    .auto{max-height:200px; overflow-y:scroll;}
+	.auto{max-height:200px; overflow-y:scroll;border: 0px solid #dedede;}
     .opeDiv span{float: right;width: 46px;height: 24px;line-height: 24px;text-align: center;font-size: 12px;border: 1px solid #9fa3a8;border-radius: 3px;color: #616d73;margin: 0 13px 12px 0;box-shadow: 0 1px 5px rgba(0,0,0,0.3);cursor: pointer;}
 	.Confirm{ background: linear-gradient(#83c56a, #63b254); border: 1px solid #46975d!important;; color: #fff!important;}
 	.ui-close-date{color: #fff; font-size: 14px!important; float:right!important; margin-right:10px!important}
